themes/newave/src/scss/pages/_why.scss
/*=============================================>>>>>
= Why New Avenue =
===============================================>>>>>*/

// set locally; used in hero filter
$blackish: rgb(16, 25, 29);

.why {
  h1 {
    margin-top: 10.8vh;
    @include at-least(tablet-landscape) {
      margin-top: 140px;
    }
  }
  h2 {
    // margin-top: 0;
  }

.hero:after {
    opacity: .86;
    background: linear-gradient(-6deg, $blackish, $blackish, transparent, $blackish);
  }
  .hero .content {
    color: white;
    text-align: left;
    top: initial;
    transform: translateX(-50%);
    bottom: 10%;
    width: 88%;

    h3 {
      display: none;
      @include at-least(tablet-landscape) {
        display: inline;
      }
    }
  }
  .save {
    background-color: rgb(94, 112, 119);
    color: white;
    padding-bottom: 4%;
    .inner {
      width: 82%;
      margin: 0 auto;

      .icons {
        display: flex;
        justify-content: space-between;
        // margin-top: -40px;
        // @include at-least(phablet) {
        //   margin-top: 0;
        // }
        img {
          width: 19%;
          @include at-least(phablet) {
            width: 14%;
          }
          @include at-least(tablet-landscape) {
            width: 12%;
          }
        }
      }
    }
  }
  .benies:nth-of-type(4) .whom {
    order: 2;
  }
  .benies {
    background-color: $mediumBlue;
    color: white;
    @include at-least(tablet-landscape) {
      display: flex;
      align-items: center;
    }

    .whom {
      width: 100%;
      height: 100%;

      @include at-least(tablet-landscape) {
        width: calc(100%/3);
      }

      .inner {
        text-align: center;
        width: 100%;
        @include at-least(tablet-landscape) {
          h2 {
            margin-top: 0;
            margin-bottom: .64em;
          }
        }
        img[src*='icon'] {
          width: 50vw;
          max-height: 220px;
          margin-bottom: 4%;
          @include at-least(tablet-landscape) {
            display: inline-block;
            width: 50%;
            flex: none;
            max-width: 299px;
            max-height: 190px;
          }
        }
      }
    }
  }
  div.benefits {
    float: left;
    @include at-least(tablet-landscape) {
      width: calc(100%*2/3);
    }
    ul {
      padding-left: 0;
      margin: 0;
      list-style: none;
      li:nth-child(2n-1) {
        background-color: $altGrey;
      }
      li:nth-child(2n) {
        background-color: $white;
      }
      li {
        display: flex;
        align-items: center;
        justify-content: space-around;
        padding: 2%;
        width: 100%;

        @include at-least(tablet-landscape) {
          // padding: 5%;
        }

        div.checkmark {
          width: 15%;
          height: 100%;
          img {
            width: 100%;
          }
          @include at-least(phablet) {
            width: 10%;
          }
          @include at-least(tablet-landscape) {
            width: 6%;
          }
        }
        span.text {
          display: inline-block;
          color: black;
          width: 76%;
          font-family: 'Montserrat', sans-serif;
          @include responsive-font(1.4vw, 17px, 40px, 26px);

        }
      }
    }
  }


/*= End of Why New Ave =*/
/*=============================================<<<<<*/


}

